Delete unused media and refactor all code